<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_height="match_parent"
                                             tools:context=".CrearEventos" android:id="@+id/frgmCrearEvento"
                                             android:layout_width="match_parent">
    <TextView
            android:text="@string/NuevoEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTituloCrearEvento" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="9dp"
            android:layout_marginStart="9dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp" android:textColor="@color/colorTexto" android:textStyle="bold"/>
    <ImageView
            android:src="@drawable/ic_menu_camera"
            android:layout_width="110dp"
            android:layout_height="128dp"
            android:id="@+id/ivFotoEvento"
            android:contentDescription="@string/description"
            android:layout_marginTop="42dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0" tools:targetApi="donut"/>
    <TextView
            android:text="@string/NombreEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNombreAplicación" app:layout_constraintStart_toEndOf="@+id/ivFotoEvento"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTituloCrearEvento" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:textStyle="bold" android:textColor="@color/colorTexto" android:textSize="14sp"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/contenidoIngreso"
            android:ems="10"
            android:id="@+id/txtNombreEvento"
            app:layout_constraintStart_toEndOf="@+id/ivFotoEvento" android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNombreAplicación" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/NombreEventoHint"
            android:importantForAutofill="no" tools:targetApi="o"
    />
    <TextView
            android:text="@string/DescripcionEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescripcion" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/ivFotoEvento" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.023" android:textStyle="bold"
            android:textSize="14sp" android:textColor="@color/colorTexto"/>
    <EditText
            android:layout_width="376dp"
            android:layout_height="67dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txtDescripcion" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDescripcion" app:layout_constraintHorizontal_bias="0.368"
            android:hint="@string/DescripcionEventoHint" android:importantForAutofill="no" tools:targetApi="o"/>
    <TextView
            android:text="@string/FechaEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFecha" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtDescripcion" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.023" android:textStyle="bold"
            android:textColor="@color/colorTexto"/>
    <EditText
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:ems="10"
            android:id="@+id/txtFecha"
            android:nextFocusDown="@+id/cvCalendario"
            android:hint="@string/FechaEventoHint" android:layout_marginEnd="8dp"
            android:focusable="false"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFecha" app:layout_constraintHorizontal_bias="0.259"
            android:importantForAutofill="no" tools:targetApi="o" tools:ignore="KeyboardInaccessibleWidget"/>
    <Button
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnGuardarEvento"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:text="@string/Guardar"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtHora"/>
    <TextView
            android:text="@string/HoraEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHora" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtFecha" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.023"/>
    <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtHora"
            android:layout_width="368dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHora" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:importantForAutofill="no"
            tools:targetApi="o" android:text="@string/contenidoIngreso" android:hint="@string/HoraEventoHint"/>
</android.support.constraint.ConstraintLayout>
