<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".CrearPerfil" android:id="@+id/frgmPerfil">
    <TextView
            android:text="@string/tuPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTituloPerfil" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold" android:textSize="18sp" android:textColor="@color/colorTexto"/>
    <ImageView
            android:src="@drawable/ic_menu_camera"
            android:layout_width="95dp"
            android:layout_height="105dp"
            android:id="@+id/ivImagen" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTituloPerfil" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:contentDescription="@string/description"
    />
    <EditText
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/contenidoIngreso"
            android:ems="10"
            android:id="@+id/txtNombres"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            app:layout_constraintHorizontal_bias="0.026"
            android:hint="@string/Nombre"
            android:importantForAutofill="no" tools:targetApi="o" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtIdentidad"/>
    <EditText
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/contenidoIngreso"
            android:ems="10"
            android:id="@+id/txtApellidos" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtNombres" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.03" android:hint="@string/Apellido"
            android:importantForAutofill="no" tools:targetApi="o"/>
    <EditText
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtCorreo"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtApellidos" app:layout_constraintHorizontal_bias="0.03"
            android:hint="@string/Correo" android:importantForAutofill="no"
            tools:targetApi="o"/>
    <Button
            android:text="@string/Aceptar"
            android:layout_width="284dp"
            android:layout_height="45dp"
            android:id="@+id/btnAceptar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            app:layout_constraintTop_toBottomOf="@+id/txtCorreo"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.29"
            android:background="@color/colorPrimary" android:layout_marginTop="3dp"/>
    <EditText
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:text="@string/contenidoIngreso"
            android:ems="10"
            android:id="@+id/txtIdentidad" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ivImagen" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            app:layout_constraintHorizontal_bias="0.03" android:layout_width="303dp" android:hint="@string/Identidad"
            android:importantForAutofill="no" tools:targetApi="o"/>
</androidx.constraintlayout.widget.ConstraintLayout>