<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".DefaultFragment">
    <TextView
            android:text="@string/bienvenida"
            android:layout_width="303dp"
            android:layout_height="35dp" android:id="@+id/tvBienvenida"
            android:layout_marginTop="150dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:textStyle="bold"
            android:textColor="@color/colorTexto" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/IdentidadIngreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvIdentidadIngreso" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvBienvenida"/>
    <TextView
            android:text="@string/NombreIngreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/tvIdentidadIngreso"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:inputType="textPersonName"
            android:text="@string/contenidoIngreso"
            android:ems="10"
            android:id="@+id/txtIdentidadIngreso"
            app:layout_constraintStart_toEndOf="@+id/tvIdentidadIngreso" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/tvBienvenida" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/Identidad" android:importantForAutofill="no" tools:targetApi="o"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:inputType="textPersonName"
            android:text="@string/contenidoIngreso"
            android:ems="10"
            android:id="@+id/txtNombreIngreso"
            app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/txtIdentidadIngreso"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/NombreIngreso"
            android:importantForAutofill="no" tools:targetApi="o"/>
    <Button
            android:text="@string/AccederBoton"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAcceder" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.443" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/txtNombreIngreso"
            android:contentDescription="@string/contenidoIngreso"/>
</androidx.constraintlayout.widget.ConstraintLayout>